change color cancel button in update term page

--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.css
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.css
@@ -18,11 +18,20 @@ div:has(#page-title) {
 }
 
 button {
+    
     border: none;
 }
+
 .backgroundbutton{
     background-color: var(--button-background) !important;
     color: white;
+}
+
+#cancel-button{
+    background-color: #ff204e;
+    border: none;
+    width: 100px;
+    /* animation: bounce-v 3.6s infinite; */
 }
 
 #start-button {
