--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/terms/edit-term/edit-term.component.html
@@ -176,7 +176,7 @@
             <div class="row align-items-center justify-content-center py-3">
                 <div class="col-md-6 text-center">
                     <button type="submit" class="btn btn-primary btn-lg me-3 backgroundbutton">Update</button>
-                    <button routerLink="/terms" type="button" class="btn btn-secondary btn-lg" (click)="onCancel()">Cancel</button>
+                    <button id="cancel-button" routerLink="/terms" type="button" class="btn btn-secondary btn-lg" (click)="onCancel()">Cancel</button>
                 </div>
             </div>
     
