--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/plan-details/plan-details.component.html
@@ -40,7 +40,7 @@
         <button><i class="fa-solid fa-download me-1"></i> Export</button>
       </a>
       <a *ngIf="plan" [routerLink]="['/reup-plan/', plan.id ]" class="export-button">
-        <button *ngIf="isReup"><i class="fa-solid fa-upload me-1"></i> Reup</button>
+        <button *ngIf=" (this.plan.status !== 'Approved') && ((this.plan.department.toLowerCase() === this.getUsersDepartment().toLowerCase()))"> <i class="fa-solid fa-upload me-1"></i> Reup</button>
       </a>
     </div>
   </div>
