--- a/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
+++ b/FinancialPlaningUI/FinancialPlaning/src/app/pages/plans/reup-plan/reup-plan.component.html
@@ -166,7 +166,7 @@
               </ng-container>
               <ng-container matColumnDef="status">
                 <th mat-header-cell *matHeaderCellDef> Status </th>
-                <td mat-cell *matCellDef="let element"> {{element.status}} </td>
+                <td mat-cell *matCellDef="let element"> {{transform(element.status)}} </td>
               </ng-container>
 
               <tr mat-header-row *matHeaderRowDef="columnHeaders"></tr>
